feat: 接入rk-boot

--- a/api/makefile
+++ b/api/makefile
@@ -3,4 +3,7 @@ updateApi:
 
 
 run:
-	go run demo.go -f ./etc/demo-api.yaml
+	go run main.go -f ./etc/demo-api.yaml
+
+swagger:
+    goctl api plugin -plugin goctl-swagger="swagger -filename demo.json" -api demo.api -dir .
