feat: 使用ngrok进行内外穿透

--- a/api/makefile
+++ b/api/makefile
@@ -1,6 +1,8 @@
 updateApi:
 	goctl api go -api demo.api -dir . -style gozero
 
+ngrok:
+	ngrok http 8888
 
 run:
 	go run main.go -f ./etc/demo-api.yaml
