feat: 添加分布式任务队列

--- a/api/etc/demo-api.yaml
+++ b/api/etc/demo-api.yaml
@@ -4,4 +4,10 @@ HelloRPC:
             - 127.0.0.1:2379
         Key: hello.rpc
 
+TasksRPC:
+    Etcd:
+        Hosts:
+            - 127.0.0.1:2379
+        Key: tasks.rpc
+
 Namespace: "test"
