feat: 修改配置支持本地vm启动服务

--- a/api/etc/demo-api.yaml
+++ b/api/etc/demo-api.yaml
@@ -1,13 +1,17 @@
+#Name: demo-api
+#Host: 0.0.0.0
+#Port: 8888
+
 HelloRPC:
     Etcd:
         Hosts:
-            - 127.0.0.1:2379
+            - 192.168.64.1:2379
         Key: hello.rpc
 
 TasksRPC:
     Etcd:
         Hosts:
-            - 127.0.0.1:2379
+            - 192.168.64.1:2379
         Key: tasks.rpc
 
 Namespace: "test"
