--- a/api/boot.yaml
+++ b/api/boot.yaml
@@ -10,7 +10,7 @@ zero:
           pusher:
               enabled: true                        # Enable backend job push metrics to remote pushgateway
               jobName: "demo"                       # Name of current push job
-              remoteAddress: "localhost:9091"       # Remote address of pushgateway
+              remoteAddress: "192.168.64.1:9091"       # Remote address of pushgateway
               intervalMs: 2000                      # Push interval in milliseconds
       sw:
           enabled: false                   # Optional, default: false
