feat: jaeger调用链支持

--- a/api/etc/demo-api.yaml
+++ b/api/etc/demo-api.yaml
@@ -14,4 +14,10 @@ TasksRPC:
             - 192.168.64.1:2379
         Key: tasks.rpc
 
+JaegerRPC:
+    Etcd:
+        Hosts:
+            - 192.168.64.1:2379
+        Key: jaeger.rpc
+
 Namespace: "test"
