--- a/api/boot.yaml
+++ b/api/boot.yaml
@@ -23,3 +23,16 @@ zero:
               enabled: true                 # Optional, default: false
           meta:
               enabled: true                 # Optional, default: false
+          tracingTelemetry:
+              enabled: true                                          # Enable tracing interceptor/middleware
+              exporter:
+                  jaeger:
+                      agent:
+                        enabled: true                                    # Export to jaeger agent
+                        host: "192.168.64.1"                                        # Optional, default: localhost
+                        port: 6831                                         # Optional, default: 6831
+                      collector:
+                        enabled: true                                   # Optional, default: false
+                        endpoint: "http://192.168.64.1:14268/api/traces"                                    # Optional, default: http://localhost:14268/api/traces
+                        username: ""                                    # Optional, default: ""
+                        password: ""                                    # Optional, default: ""
