--- a/api/boot.yaml
+++ b/api/boot.yaml
@@ -10,7 +10,7 @@ zero:
           pusher:
               enabled: true                        # Enable backend job push metrics to remote pushgateway
               jobName: "demo"                       # Name of current push job
-              remoteAddress: "192.168.64.1:9091"       # Remote address of pushgateway
+              remoteAddress: "127.0.0.1:9091"       # Remote address of pushgateway
               intervalMs: 2000                      # Push interval in milliseconds
       sw:
           enabled: false                   # Optional, default: false
@@ -29,10 +29,10 @@ zero:
                   jaeger:
                       agent:
                         enabled: true                                    # Export to jaeger agent
-                        host: "192.168.64.1"                                        # Optional, default: localhost
+                        host: "127.0.0.1"                                        # Optional, default: localhost
                         port: 6831                                         # Optional, default: 6831
-                      collector:
-                        enabled: true                                   # Optional, default: false
-                        endpoint: "http://192.168.64.1:14268/api/traces"                                    # Optional, default: http://localhost:14268/api/traces
-                        username: ""                                    # Optional, default: ""
-                        password: ""                                    # Optional, default: ""
+#                      collector:
+#                        enabled: true                                   # Optional, default: false
+#                        endpoint: "http://127.0.0.1:14268/api/traces"                                    # Optional, default: http://localhost:14268/api/traces
+#                        username: ""                                    # Optional, default: ""
+#                        password: ""                                    # Optional, default: ""
