--- a/api/boot.yaml
+++ b/api/boot.yaml
@@ -1,6 +1,6 @@
 ---
 zero:
-    - name: demo-api                    # Required
+    - name: go-zero                    # Required
       port: 8888                        # Required
       enabled: true                     # Required
       tv:
@@ -27,12 +27,12 @@ zero:
               enabled: true                                          # Enable tracing interceptor/middleware
               exporter:
                   jaeger:
-                      agent:
-                        enabled: true                                    # Export to jaeger agent
-                        host: "127.0.0.1"                                        # Optional, default: localhost
-                        port: 6831                                         # Optional, default: 6831
-#                      collector:
-#                        enabled: true                                   # Optional, default: false
-#                        endpoint: "http://127.0.0.1:14268/api/traces"                                    # Optional, default: http://localhost:14268/api/traces
-#                        username: ""                                    # Optional, default: ""
-#                        password: ""                                    # Optional, default: ""
+#                      agent:
+#                        enabled: true                                    # Export to jaeger agent
+#                        host: "127.0.0.1"                                        # Optional, default: localhost
+#                        port: 6831                                         # Optional, default: 6831
+                      collector:
+                        enabled: true                                   # Optional, default: false
+                        endpoint: "http://127.0.0.1:14268/api/traces"                                    # Optional, default: http://localhost:14268/api/traces
+                        username: ""                                    # Optional, default: ""
+                        password: ""                                    # Optional, default: ""
