--- a/rpc/jaeger/etc/jaeger.yaml
+++ b/rpc/jaeger/etc/jaeger.yaml
@@ -12,3 +12,9 @@ HelloRPC:
             - 127.0.0.1:2379
         Key: hello.rpc
     Target: "127.0.0.1:7070"
+
+Telemetry:
+    Name: jaeger.rpc
+    Endpoint: http://127.0.0.1:14268/api/traces
+    Sampler: 1.0
+    Batcher: jaeger
