--- a/rpc/tasks/etc/tasks.yaml
+++ b/rpc/tasks/etc/tasks.yaml
@@ -4,3 +4,9 @@ Etcd:
   Hosts:
   - 127.0.0.1:2379
   Key: tasks.rpc
+
+Telemetry:
+  Name: tasks.rpc
+  Endpoint: http://127.0.0.1:14268/api/traces
+  Sampler: 1.0
+  Batcher: jaeger
