feat: 调整pushgateway地址，避免与北极星prom冲突

--- a/rpc/jaeger/etc/jaeger.yaml
+++ b/rpc/jaeger/etc/jaeger.yaml
@@ -7,11 +7,12 @@ Etcd:
 
 
 HelloRPC:
-#    Etcd:
-#        Hosts:
-#            - 127.0.0.1:2379
-#        Key: hello.rpc
+    Etcd:
+        Hosts:
+            - 127.0.0.1:2379
+        Key: hello.rpc
     Target: "polaris://127.0.0.1:8091/hello.rpc?wait=14s"
+#    Target: "127.0.0.1:7070"
 
 Telemetry:
     Name: jaeger.rpc
