--- a/rpc/hello/etc/hello.yaml
+++ b/rpc/hello/etc/hello.yaml
@@ -1,14 +1,14 @@
-Name: hello.rpc
+Name: hello.Hello
 ListenOn: 0.0.0.0:7070
 Etcd:
   Hosts:
   - 127.0.0.1:2379
-  Key: hello.rpc
+  Key: hello.Hello
 Mode: test
 HttpPort: 18080
 
 Telemetry:
-  Name: hello.rpc
+  Name: hello.Hello
   Endpoint: http://127.0.0.1:14268/api/traces
   Sampler: 1.0
   Batcher: jaeger
